src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>ConventionalClassification__c</fullName>
        <label>常规产品品牌</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>海德堡</fullName>
                </value>
                <value>
                    <fullName>光太激光</fullName>
                </value>
                <value>
                    <fullName>光太超声</fullName>
                </value>
                <value>
                    <fullName>徕卡</fullName>
                </value>
                <value>
                    <fullName>歌德</fullName>
                </value>
                <value>
                    <fullName>罗兰</fullName>
                </value>
                <value>
                    <fullName>KOWA</fullName>
                </value>
                <value>
                    <fullName>小梁消融仪</fullName>
                </value>
                <value>
                    <fullName>综合检查台</fullName>
                </value>
                <value>
                    <fullName>NeoMedix</fullName>
                </value>
                <value>
                    <fullName>Frastema</fullName>
                </value>
                <value>
                    <fullName>HAI</fullName>
                </value>
                <value>
                    <fullName>HEINE</fullName>
                </value>
                <value>
                    <fullName>TOKA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LargeProductClass__c</fullName>
        <label>大型产品品牌</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OPTOS</fullName>
                </value>
                <value>
                    <fullName>SCHWIND</fullName>
                </value>
                <value>
                    <fullName>LENSAR</fullName>
                </value>
                <value>
                    <fullName>LUNEAU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpmc__c</fullName>
        <label>产品名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sscpjglx__c</fullName>
        <label>所属产品价格类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>大型欧堡基准价</fullName>
                </value>
                <value>
                    <fullName>大型屈光基准价</fullName>
                </value>
                <value>
                    <fullName>常规共有直销</fullName>
                </value>
                <value>
                    <fullName>常规渠道民营</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Convention</value>
        </filters>
        <label>全部产品</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Convention</fullName>
        <active>true</active>
        <label>常规</label>
    </recordTypes>
    <recordTypes>
        <fullName>lage</fullName>
        <active>true</active>
        <label>大型</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>